--- a/understanding-llms/homework/04_evaluation.ipynb
+++ b/understanding-llms/homework/04_evaluation.ipynb
@@ -52,11 +52,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "id": "z6ROE3zHlyot",
-        "outputId": "596344c6-92bf-4a6a-eec9-8abfb2a7d308",
+        "outputId": "197ceafe-6a62-4d3c-e6d5-8ed45fdaafcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -107,7 +107,7 @@
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas>=2.2.0->minicons) (2025.2)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.19.0->datasets) (3.4.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.19.0->datasets) (3.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.19.0->datasets) (2025.6.15)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.19.0->datasets) (2025.7.9)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.11/dist-packages (from torch>=2.5.0->minicons) (3.5)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch>=2.5.0->minicons) (3.1.6)\n",
             "Collecting nvidia-cuda-nvrtc-cu12==12.4.127 (from torch>=2.5.0->minicons)\n",
@@ -141,29 +141,29 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=2.2.0->minicons) (1.17.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch>=2.5.0->minicons) (3.0.2)\n",
             "Downloading minicons-0.3.32-py3-none-any.whl (41 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cublas_cu12-12.4.5.8-py3-none-manylinux2014_x86_64.whl (363.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cuda_cupti_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (13.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m115.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m120.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cuda_nvrtc_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (24.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m59.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m88.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cuda_runtime_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (883 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m47.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m61.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cudnn_cu12-9.1.0.70-py3-none-manylinux2014_x86_64.whl (664.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cufft_cu12-11.2.1.3-py3-none-manylinux2014_x86_64.whl (211.5 MB)\n",
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_curand_cu12-10.3.5.147-py3-none-manylinux2014_x86_64.whl (56.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m15.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cusolver_cu12-11.6.1.9-py3-none-manylinux2014_x86_64.whl (127.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cusparse_cu12-12.3.1.170-py3-none-manylinux2014_x86_64.whl (207.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (21.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m101.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m43.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading wonderwords-2.2.0-py3-none-any.whl (44 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.0/45.0 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.0/45.0 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: wonderwords, nvidia-nvjitlink-cu12, nvidia-curand-cu12, nvidia-cufft-cu12, nvidia-cuda-runtime-cu12, nvidia-cuda-nvrtc-cu12, nvidia-cuda-cupti-cu12, nvidia-cublas-cu12, nvidia-cusparse-cu12, nvidia-cudnn-cu12, nvidia-cusolver-cu12, minicons\n",
             "  Attempting uninstall: nvidia-nvjitlink-cu12\n",
             "    Found existing installation: nvidia-nvjitlink-cu12 12.5.82\n",
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "9bt5bBvklyov"
       },
@@ -253,13 +253,12 @@
       "metadata": {
         "collapsed": true,
         "id": "gVjzgKZ40sht",
-        "outputId": "61200d5f-0a6e-4689-c308-a3e312c74dc8",
+        "outputId": "1e374408-e4ab-4d5b-c5be-836e58492a47",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +291,7 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (3.4.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2.4.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2025.6.15)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2025.7.9)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.2)\n",
@@ -305,11 +304,11 @@
             "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.20.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n",
             "Downloading datasets-4.0.0-py3-none-any.whl (494 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m494.8/494.8 kB\u001b[0m \u001b[31m11.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m494.8/494.8 kB\u001b[0m \u001b[31m17.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading huggingface_hub-0.33.4-py3-none-any.whl (515 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m515.3/515.3 kB\u001b[0m \u001b[31m18.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m515.3/515.3 kB\u001b[0m \u001b[31m36.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading fsspec-2025.3.0-py3-none-any.whl (193 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m193.6/193.6 kB\u001b[0m \u001b[31m11.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m193.6/193.6 kB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: fsspec, huggingface_hub, datasets\n",
             "  Attempting uninstall: fsspec\n",
             "    Found existing installation: fsspec 2025.3.2\n",
@@ -327,21 +326,6 @@
             "gcsfs 2025.3.2 requires fsspec==2025.3.2, but you have fsspec 2025.3.0 which is incompatible.\u001b[0m\u001b[31m\n",
             "\u001b[0mSuccessfully installed datasets-4.0.0 fsspec-2025.3.0 huggingface_hub-0.33.4\n"
           ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "datasets",
-                  "fsspec"
-                ]
-              },
-              "id": "aae5f6fc674d4ff5acee37716a0fc176"
-            }
-          },
-          "metadata": {}
         }
       ]
     },
@@ -877,12 +861,12 @@
         "field_stats\n"
       ],
       "metadata": {
-        "id": "tdjxuAW-zcxk",
-        "outputId": "21c790b8-4233-4872-fb69-8b4bedf21bae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 174
-        }
+        },
+        "id": "tdjxuAW-zcxk",
+        "outputId": "21c790b8-4233-4872-fb69-8b4bedf21bae"
       },
       "execution_count": 17,
       "outputs": [
@@ -1251,12 +1235,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "jVrgA9s8zpKi",
-        "outputId": "fd18fdf0-cf11-4069-f6af-4f2bd4f5a267",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 517
-        }
+        },
+        "id": "jVrgA9s8zpKi",
+        "outputId": "fd18fdf0-cf11-4069-f6af-4f2bd4f5a267"
       },
       "execution_count": 18,
       "outputs": [
@@ -1293,11 +1277,11 @@
         "print(f\"Hardest:  {hardest.suite}  ({hardest.accuracy:.3%})\")\n"
       ],
       "metadata": {
-        "id": "irLBPzv7zv21",
-        "outputId": "4f3e649f-004a-4038-c990-7271cd3543ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "irLBPzv7zv21",
+        "outputId": "4f3e649f-004a-4038-c990-7271cd3543ed"
       },
       "execution_count": 19,
       "outputs": [
@@ -1378,7 +1362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "H9tSkzMXlyo6"
       },
@@ -1390,7 +1374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "cxbqZ4kUlyo6"
       },
@@ -1407,21 +1391,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "contexts = [\n",
+        "    \"You are at a German supermarket. You walk up to the cashier and greet them.\\nI would say: \",\n",
+        "    \"You are at an American supermarket. You walk up to the cashier and greet them.\\nI would say: \",\n",
+        "]"
+      ],
       "metadata": {
-        "id": "W6mDvJf0lyo7"
+        "id": "CEpWGAqXDISG"
       },
-      "outputs": [],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "W6mDvJf0lyo7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "897035d4-fe72-4ece-b22b-0b50a7113ab7"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gpt2-large predictions : ['us', 'us']\n",
+            "bloom-560m predictions : ['us', 'us']\n"
+          ]
+        }
+      ],
       "source": [
         "# here is some starter code; please fill in your code / comments where it says #### YOUR CODE / COMMENT HERE ####\n",
-        "\n",
+        "import numpy as np\n",
         "# set up a scorer\n",
         "gpt2_scorer = scorer.IncrementalLMScorer(\n",
         "    ### YOUR CODE HERE ###\n",
+        "    \"gpt2-large\",device\n",
         ")\n",
         "\n",
         "bloom_scorer = scorer.IncrementalLMScorer(\n",
         "    ### YOUR CODE HERE ###\n",
+        "    \"bigscience/bloom-560m\", device\n",
         ")\n",
         "# initialize list for storing the predictions\n",
         "gpt2_predictions = []\n",
@@ -1429,18 +1442,30 @@
         "answer_keys = [\"ger\", \"nonsense\", \"us\"]\n",
         "\n",
         "# iterate over contexts\n",
-        "for context in range(### YOUR CODE HERE ###):\n",
+        "for context in contexts:\n",
         "    # format / provide  the possible answer options from your vignette\n",
-        "    answer_options = ### YOUR CODE HERE ###\n",
+        "    answer_options = [\"Hallo.\", \"Bye.\", \"Hello, how are you?\"]### YOUR CODE HERE ###\n",
         "    # pass a list of contexts and a list of continuations to be scored\n",
-        "    answer_scores_gpt2 = gpt2_scorer.conditional_score(\n",
+        "    answer_scores_gpt2 = gpt2_scorer.conditional_score([context]*len(answer_options),\n",
+        "                                                 answer_options\n",
         "        # format the question into a list of same length as the number of answer options\n",
         "        ### YOUR CODE HERE ###,\n",
         "    )\n",
-        "    answer_scores_bloom = bloom_scorer.conditional_score(\n",
+        "    answer_scores_bloom = bloom_scorer.conditional_score([context]*len(answer_options),\n",
+        "                                                 answer_options\n",
         "        # format the question into a list of same length as the number of answer options\n",
         "        ### YOUR CODE HERE ###,\n",
         "    )\n",
+        "    gpt2_pred_idx  = int(np.argmax(answer_scores_gpt2))\n",
+        "    bloom_pred_idx = int(np.argmax(answer_scores_bloom))\n",
+        "\n",
+        "    # map index → label and store\n",
+        "    gpt2_predictions.append(answer_keys[gpt2_pred_idx])\n",
+        "    bloom_predictions.append(answer_keys[bloom_pred_idx])\n",
+        "\n",
+        "# quick sanity-check\n",
+        "print(\"gpt2-large predictions :\", gpt2_predictions)\n",
+        "print(\"bloom-560m predictions :\", bloom_predictions)\n",
         "\n",
         "    # check / inspect which answer has the highest score and which answer type (i.e., \"culture\") it corresponds to\n",
         "    ### YOUR CODE / COMMENT HERE ###"
