--- a/understanding-llms/homework/04_evaluation.ipynb
+++ b/understanding-llms/homework/04_evaluation.ipynb
@@ -1887,12 +1887,12 @@
         "tom_back.head()"
       ],
       "metadata": {
-        "id": "FVrOZ5Lipizv",
-        "outputId": "dbf5837d-90b5-495b-98f2-032bc6903665",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 518
-        }
+        },
+        "id": "FVrOZ5Lipizv",
+        "outputId": "dbf5837d-90b5-495b-98f2-032bc6903665"
       },
       "execution_count": 11,
       "outputs": [
@@ -2532,8 +2532,7 @@
       "version": "3.10.14"
     },
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
@@ -11088,8 +11087,7 @@
           }
         }
       }
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
