--- a/understanding-llms/homework/04_evaluation.ipynb
+++ b/understanding-llms/homework/04_evaluation.ipynb
@@ -52,11 +52,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "id": "z6ROE3zHlyot",
-        "outputId": "91c8c035-2e53-4b51-aba5-74f75ef1dd44",
+        "outputId": "4acb9825-5a68-4967-f840-55a4d46fe766",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -141,29 +141,29 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=2.2.0->minicons) (1.17.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch>=2.5.0->minicons) (3.0.2)\n",
             "Downloading minicons-0.3.32-py3-none-any.whl (41 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cublas_cu12-12.4.5.8-py3-none-manylinux2014_x86_64.whl (363.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cuda_cupti_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (13.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m109.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m53.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cuda_nvrtc_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (24.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m35.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m31.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cuda_runtime_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (883 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m37.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cudnn_cu12-9.1.0.70-py3-none-manylinux2014_x86_64.whl (664.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cufft_cu12-11.2.1.3-py3-none-manylinux2014_x86_64.whl (211.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_curand_cu12-10.3.5.147-py3-none-manylinux2014_x86_64.whl (56.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m15.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m12.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cusolver_cu12-11.6.1.9-py3-none-manylinux2014_x86_64.whl (127.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_cusparse_cu12-12.3.1.170-py3-none-manylinux2014_x86_64.whl (207.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (21.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m56.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m84.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading wonderwords-2.2.0-py3-none-any.whl (44 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.0/45.0 kB\u001b[0m \u001b[31m5.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.0/45.0 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: wonderwords, nvidia-nvjitlink-cu12, nvidia-curand-cu12, nvidia-cufft-cu12, nvidia-cuda-runtime-cu12, nvidia-cuda-nvrtc-cu12, nvidia-cuda-cupti-cu12, nvidia-cublas-cu12, nvidia-cusparse-cu12, nvidia-cudnn-cu12, nvidia-cusolver-cu12, minicons\n",
             "  Attempting uninstall: nvidia-nvjitlink-cu12\n",
             "    Found existing installation: nvidia-nvjitlink-cu12 12.5.82\n",
@@ -253,13 +253,13 @@
       "metadata": {
         "collapsed": true,
         "id": "gVjzgKZ40sht",
-        "outputId": "74f4dd6f-bfb3-44e6-db7f-b8a815fc2ba2",
+        "outputId": "36773251-f4c3-464a-bf4f-deaa4fff27bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,11 +305,11 @@
             "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.20.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n",
             "Downloading datasets-4.0.0-py3-none-any.whl (494 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m494.8/494.8 kB\u001b[0m \u001b[31m17.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m494.8/494.8 kB\u001b[0m \u001b[31m16.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading huggingface_hub-0.33.4-py3-none-any.whl (515 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m515.3/515.3 kB\u001b[0m \u001b[31m26.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m515.3/515.3 kB\u001b[0m \u001b[31m39.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading fsspec-2025.3.0-py3-none-any.whl (193 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m193.6/193.6 kB\u001b[0m \u001b[31m17.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m193.6/193.6 kB\u001b[0m \u001b[31m19.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: fsspec, huggingface_hub, datasets\n",
             "  Attempting uninstall: fsspec\n",
             "    Found existing installation: fsspec 2025.3.2\n",
@@ -338,7 +338,7 @@
                   "fsspec"
                 ]
               },
-              "id": "639bace71c2043919d43c9e56a6bb486"
+              "id": "dce154d4d2b44e66ab9596104e216194"
             }
           },
           "metadata": {}
@@ -1717,12 +1717,12 @@
         ">\n",
         "| Context / Option | GPT-2 | Bloom |\n",
         "|------------------|-------|-------|\n",
-        "| context 1 + A      | ...   | ...   |\n",
-        "| context 2 + A          |       |       |\n",
-        "| context 1 + B      |       |       |\n",
-        "| context 2 + B          |       |       |\n",
-        "| context 1 + C         |       |       |\n",
-        "| context 2 + C         |       |       |\n",
+        "| context 1 + A      | -10.195   | -5.835   |\n",
+        "| context 2 + A          |   -11.871   |   -7.767   |\n",
+        "| context 1 + B      |    -16.144   |    -9.559   |\n",
+        "| context 2 + B          |    -16.528   |    -9.546   |\n",
+        "| context 1 + C         |   -9.406    |    -6.172   |\n",
+        "| context 2 + C         |    -8.681   |   -6.045    |\n",
         "\n",
         "> 3. Do the models show a preference for a particular cultural setting (context 1 or context 2)? Is there evidence for whether cultural biases might be caused by training data?\n",
         "> 4. Are there aspects of the prompt that might influence your results? Please provide a brief justification / example why (not). Write 2 sentences max."
@@ -1730,7 +1730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 3,
       "metadata": {
         "id": "H9tSkzMXlyo6"
       },
@@ -1742,7 +1742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 4,
       "metadata": {
         "id": "cxbqZ4kUlyo6"
       },
@@ -1763,36 +1763,44 @@
         "contexts = [\n",
         "    \"You are at your house in Germany. Your want to call you brother from his room.\\nI would say: \",\n",
         "    \"You are at your house in America. Your want to call you brother from his room.\\nI would say: \",\n",
-        "    \"You are at your house in India. Your want to call you brother from his room.\\nI would say: \",\n",
+        "    #\"You are at your house in India. Your want to call you brother from his room.\\nI would say: \",\n",
         "    ]"
       ],
       "metadata": {
         "id": "CEpWGAqXDISG"
       },
-      "execution_count": 76,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "id": "W6mDvJf0lyo7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e90e789e-1b83-48cc-c9ba-a0bf66f0b92b"
+        "outputId": "017ec260-4b63-4226-a9f6-0328e851985c"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'scorer' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1-329691064.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# set up a scorer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m gpt2_scorer = scorer.IncrementalLMScorer(\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;31m### YOUR CODE HERE ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;34m\"gpt2-large\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'scorer' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Context You are at your house in Germany. Your want to call you brother from his room.\n",
+            "I would say: :\n",
+            "  Option german: 'Bruder' → GPT-2: -10.195, BLOOM: -5.835\n",
+            "  Option english: 'Bro' → GPT-2: -16.144, BLOOM: -9.559\n",
+            "  Option other: 'Bhai' → GPT-2: -9.406, BLOOM: -6.172\n",
+            "\n",
+            "Context You are at your house in America. Your want to call you brother from his room.\n",
+            "I would say: :\n",
+            "  Option german: 'Bruder' → GPT-2: -11.871, BLOOM: -7.767\n",
+            "  Option english: 'Bro' → GPT-2: -16.528, BLOOM: -9.546\n",
+            "  Option other: 'Bhai' → GPT-2: -8.681, BLOOM: -6.045\n",
+            "gpt2-large predictions : ['other', 'other']\n",
+            "bloom-560m predictions : ['german', 'other']\n"
           ]
         }
       ],
@@ -1812,7 +1820,7 @@
         "# initialize list for storing the predictions\n",
         "gpt2_predictions = []\n",
         "bloom_predictions = []\n",
-        "answer_keys = [\"german\", \"english\", \"hindi\"]\n",
+        "answer_keys = [\"german\", \"english\", \"other\"]\n",
         "\n",
         "# iterate over contexts\n",
         "for context in contexts:\n",
@@ -1835,7 +1843,7 @@
         "    # map index → label and store\n",
         "    gpt2_predictions.append(answer_keys[gpt2_pred_idx])\n",
         "    bloom_predictions.append(answer_keys[bloom_pred_idx])\n",
-        "    print(f\"\\nContext {context+1}:\")\n",
+        "    print(f\"\\nContext {context}:\")\n",
         "    for label, opt, g_score, b_score in zip(answer_keys, answer_options, answer_scores_gpt2, answer_scores_bloom):\n",
         "      print(f\"  Option {label}: '{opt}' → GPT-2: {g_score:.3f}, BLOOM: {b_score:.3f}\")\n",
         "\n",
@@ -1873,7 +1881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "fybapon5lyo9",
         "outputId": "75331808-1e75-4a84-e633-44564969c262",
@@ -2117,7 +2125,7 @@
         "id": "FVrOZ5Lipizv",
         "outputId": "09cf3c4f-9fc0-46a9-c909-ee9b4a353132"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2491,7 +2499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "CKPuut-zlyo9",
         "outputId": "21ed42e6-4122-460d-9e2d-09ffb850e401",
@@ -2565,7 +2573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "AlYeEShLlyo-"
       },
@@ -2639,7 +2647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "I1IHEflflyo_",
         "outputId": "9521ac19-c5fd-4237-9b1c-2f8b485d056d",
@@ -2762,7 +2770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "S47mytjjlypC",
         "outputId": "e8b9ea80-6a6c-4c88-cb14-74f12e60cad0",
@@ -3117,7 +3125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3145,7 +3153,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3197,7 +3205,7 @@
           "height": 658
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3584,7 +3592,7 @@
           "height": 425
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3984,7 +3992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "wEAtbi_blypD",
         "outputId": "27ad4046-e052-4e99-8d74-6fb52106c698",
@@ -4301,7 +4309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "9cxJgi1-lypD",
         "outputId": "ce8c0dfc-0533-470a-d1bf-577ea93ad14f",
@@ -4375,7 +4383,7 @@
           "height": 425
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
